--- a/experiments/conf/params_flickr8k.yaml
+++ b/experiments/conf/params_flickr8k.yaml
@@ -4,12 +4,13 @@ seed: 42                         # random seed
 with_cuda: False                  # CUDA training
 path_save: "experiments/logs"    # path to save all artifacts (models, checkpoints, logs)
 new_folder: True                 # to handle all experiments in new folders
+bleu_n: 3
 
 TRAIN:
   resume: ""
-  epochs: 25
+  epochs: 5
   optim: "adam"                   # support also "adam", "rmsprop"
-  lr: 0.0003                       # this is for "sgd" optimizer
+  lr: 0.001                       # this is for "sgd" optimizer
   # momentum: 0.9                  # this is for "sgd" optimizer
   # weight_decay: 0.0005           #
   scheduler: ""            # "StepLR" or ""
@@ -17,10 +18,10 @@ TRAIN:
   # lr_schedule_gamma: 0.1         #
 
 MODEL:
-  name: "resnet_50_lstm"        # could be 'resnet_152_lstm', 'vgg_bn_pre_in3x32x32_out10', 'vgg_bn_in3x32x32_out10'
+  name: "resnet_152_lstm"        # could be 'resnet_152_lstm', 'vgg_bn_pre_in3x32x32_out10', 'vgg_bn_in3x32x32_out10'
   init: "default"                # "default" or  "resnet" or "xavier"
   weights: ""                    #
-  embed_size: 2048
+  embed_size: 256
   hidden_size: 512
   num_layers: 1
 
@@ -28,21 +29,18 @@ DATASET:
   name: "flickr8k"
   path: "data/flickr8k/"
   batch_sizes:
-    train: 256                # input batch size for training
-    val: 256                  # input batch size for testing
-  download: False
+    train: 128                # input batch size for training
+    val: 128                  # input batch size for testing
   num_workers: 4
   transforms:
     tokenizer: "nltk" 
     threshold: 5
     train: "flickr8k"           
     val: "flickr8k_init"             
-
-  tiny: False
+  tiny: True
 
 LOG:
   iter_interval: 1     # how often (iter) display training details
-  visdom: False
-  tensorboard: True
-  wandb: True
-  do_checkpoint: True
+  tensorboard: False
+  wandb: False
+  do_checkpoint: False
