fixes to run on sagemaker

--- a/experiments/conf/params_flickr8k.yaml
+++ b/experiments/conf/params_flickr8k.yaml
@@ -37,7 +37,7 @@ DATASET:
     threshold: 5
     train: "flickr8k"           
     val: "flickr8k_init"             
-  tiny: True
+  tiny: False
 
 LOG:
   iter_interval: 1     # how often (iter) display training details
