--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,11 +1,11 @@
-pycocotools==2.0.3
+pycocotools
 torch>=1.10.1
 torchvision>=0.11.2
-nltk>=3.6.7
+nltk
 PyYAML>=6.0
-tensorboard==2.7.0
+tensorboard
 setuptools==59.5.0
-wandb>=0.12.9
-kaggle>=1.5.12
+wandb
+kaggle
 pandas
 numpy
