coco fix abrtract dataset

--- a/experiments/conf/params_base.yaml
+++ b/experiments/conf/params_base.yaml
@@ -5,6 +5,7 @@ seed: 42                         # random seed
 with_cuda: True                  # CUDA training
 path_save: "experiments/logs"    # path to save all artifacts (models, checkpoints, logs)
 new_folder: True                 # to handle all experiments in new folders
+tyne_mode: False                 # hyperparam tuning
 
 TRAIN:
   resume: ""
